<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7DA3AF"
    tools:context=".activities.InfoNoteFragment">

    <ImageView
        android:id="@+id/ivInfo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/info_ivInfo_contentDescription"
        android:src="@drawable/note_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/info_tvTitle_text"
        android:textStyle="bold"
        android:textColor="#4C4C4C"
        android:textSize="@dimen/info_tvTitle_textSize"
        app:layout_constraintEnd_toEndOf="@+id/ivInfo"
        app:layout_constraintStart_toStartOf="@+id/ivInfo"
        app:layout_constraintTop_toBottomOf="@+id/ivInfo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/cvContainer"
        android:layout_margin="@dimen/info_tvDescription_layout_margin"
        app:cardCornerRadius="40dp"
        android:backgroundTint="#C9D8E8"
        app:layout_constraintBottom_toTopOf="@+id/btBack"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <EditText
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/info_tvDescription_layout_margin"
            android:text="@string/info_tvDescription_text"
            android:textColor="#4C4C4C"
            android:textSize="@dimen/info_tvDescription_textSize" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btBack"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#C1CFE4"
        android:text="@string/info_btBack_text"
        app:layout_constraintTop_toBottomOf="@id/cvContainer"
        android:textColor="#4C4C4C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>