<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/item_cvRoot_layout_margin"
    app:cardBackgroundColor="#AFC5DC"
    app:cardCornerRadius="20dp"
    app:cardElevation="@dimen/item_cvRoot_cardElevation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivEdit"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="@dimen/item_ivEdit_layout_margin"
            android:contentDescription="@string/item_ivEdit_contentDescription"
            android:src="@drawable/edit_icon" />

        <TextView
            android:id="@+id/tvNoteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/item_tvNoteTitle_layout_margin"
            android:padding="@dimen/item_tvNoteTitle_padding"
            android:layout_marginTop="8dp"
            android:text="@string/item_tvNoteTitle_text"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/item_tvNoteTitle_textSize"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNoteTitle"
            android:layout_margin="@dimen/item_tvDescription_layout_margin"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="@dimen/item_tvDescription_padding"
            android:text="@string/item_tvDescription_text"
            android:textColor="@color/black"

            />
    </RelativeLayout>


</androidx.cardview.widget.CardView>